--- a/.github/workflows/run_ci_cd.yml
+++ b/.github/workflows/run_ci_cd.yml
@@ -1,10 +1,8 @@
 ---
-name: Checkout Git Repo with python 3.10
+name: Install python 3.10.10
 
 on:
-  push:
-    branches:
-    - 18-setup-cicd-to-checkout-git-repo-with-python-310
+  pull_request:
 
 jobs:
 
@@ -13,11 +11,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: check code
+    - name: Check out Repo Code
       uses: actions/checkout@v3
 
     - name: Set up Python
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
       with:
         python-version: 3.10.10
 
