--- a/.github/workflows/run_ci_cd.yml
+++ b/.github/workflows/run_ci_cd.yml
@@ -27,6 +27,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Check out Repo
+      uses: actions/checkout@v3
+
     - name: Install Dependencies
       run: python -m pip install -r requirements.txt
 
