--- a/.github/workflows/run_ci_cd.yml
+++ b/.github/workflows/run_ci_cd.yml
@@ -31,7 +31,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Install Dependencies
-      run: python -m pip install -r requirements.txt
+      run: make install_dependencies
 
     - name: Display Installed Dependencies
       run: python -m pip freeze
