--- a/.github/workflows/run_ci_cd.yml
+++ b/.github/workflows/run_ci_cd.yml
@@ -22,16 +22,8 @@ jobs:
     - name: Display Python version
       run: python --version
 
-  install-packages:
-    name: Install Packages
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: Check out Repo
-      uses: actions/checkout@v3
-
     - name: Install Dependencies
-      run: make install_dependencies
+      run: make install
 
     - name: Display Installed Dependencies
       run: python -m pip freeze
