--- a/.github/workflows/run_ci_cd.yml
+++ b/.github/workflows/run_ci_cd.yml
@@ -23,7 +23,7 @@ jobs:
       run: python --version
 
     - name: Install Dependencies
-      run: make install_dependencies
+      run: python -m pip install -r requirements.txt
 
     - name: Display Installed Dependencies
       run: python -m pip freeze
