--- a/.github/workflows/run_ci_cd.yml
+++ b/.github/workflows/run_ci_cd.yml
@@ -21,3 +21,9 @@ jobs:
 
     - name: Display Python version
       run: python --version
+
+    - name: Install Dependencies
+      run: python -m pip install -r requirements.txt
+
+    - name: Display Installed Dependencies
+      run: python -m pip freeze
