added pre-commit step to the action

--- a/.github/workflows/run_ci_cd.yml
+++ b/.github/workflows/run_ci_cd.yml
@@ -27,3 +27,6 @@ jobs:
 
     - name: Display Installed Dependencies
       run: python -m pip freeze
+
+    - name: Run pre-commit
+      run: pre-commit run --all-files
