34 change cicd to also run tests (#37)
* implement pytest

* fix indentation

---------

Co-authored-by: William L <41084946+helveticae@users.noreply.github.com>
Co-authored-by: Philip de Canésie <70288386+Canesp@users.noreply.github.com>

--- a/.github/workflows/run_ci_cd.yml
+++ b/.github/workflows/run_ci_cd.yml
@@ -28,5 +28,9 @@ jobs:
     - name: Display Installed Dependencies
       run: python -m pip freeze
 
+    - name: Run Tests
+      run: python -m pytest
+
     - name: Run pre-commit
       run: pre-commit run --all-files
+
